# plugin

./: CMakeLists.txt  README  README.md
doc/: plugin.drawio
plugins/: CMakeLists.txt  consoledemo.cpp  x3config.h.in
plugins/calculation/: CMakeLists.txt
plugins/calculation/interface/: Calculate1.h  Calculate2.h  Creator.h
plugins/calculation/source/: Calculation.cpp  Calculation.h  module.cpp
plugins/consoledemo/: consoledemo.cpp
plugins/plsimple/: CMakeLists.txt
plugins/plsimple/interface/: isimple.h  isimple2.h  isimple3.h
plugins/plsimple/source/: module.cpp  plsimple.cpp  plsimple.h
plugins/pltempl/: CMakeLists.txt
plugins/pltempl/interface/: isimple.h  pltisimple.h
plugins/pltempl/source/: module.cpp  pltempl.cpp  pltempl.h
plugins/printer/: CMakeLists.txt
plugins/printer/interface/: PrintInterface.h
plugins/printer/source/: PrintImpl.cpp  PrintImpl.h  module.cpp
plugins/x3manager/: CMakeLists.txt
plugins/x3manager/interface/: Iplugins.h
plugins/x3manager/source/: CManager.cpp  CManager.h  module.cpp
test/: CMakeLists.txt
test/configure/: CMakeLists.txt  main.cpp
test/plugins/: x3config.h.in
util/: Noncopyable.h  PathOperation.h  Singleton.hpp
x3framework/: ClassEntry.h  ClassMacro.h  InterfaceMacro.h  Iobject.h  LibraryHelper.h  ModuleAction.h  ModuleMacro.h  ModuleManager.h  NormalObject.hpp  Objptr.hpp  PluginImpl.h  SingletonObject.hpp  Useplugins.h
x3framework/modulebehavior/: ModuleAction.h  PluginImpl.h  Useplugins.h
x3framework/moduleclass/: ClassEntry.h  ClassMacro.h  InterfaceMacro.h  Iobject.h  Objptr.hpp  (+3 more)
(+22 files in other folders)
